--- a/css/styles.css
+++ b/css/styles.css
@@ -155,8 +155,6 @@ span {
 
 .hero {
   max-width: 1600px;
-  height: 600px;
-
   margin-left: auto;
   margin-right: auto;
   padding-top: 200px;
@@ -213,7 +211,6 @@ span {
 
 .container-icon {
   display: flex;
-  width: 270px;
   height: 120px;
   margin-top: 0;
   margin-bottom: 30px;
@@ -224,10 +221,7 @@ span {
 }
 
 .icon-features {
-  width: 70px;
-  height: 70px;
-  margin-right: 100px;
-  margin-left: 100px;
+  justify-content: center;
 }
 
 .features .item-features + .item-features {
@@ -342,14 +336,15 @@ span {
   background-color: var(--accent-color);
 }
 
-.socials-link:hover .socials-icon {
+.socials-link:hover .socials-icon,
+.socials-link:focus .socials-icon {
   fill: #fff;
 }
 
 /* button */
 .button {
   display: inline-block;
-  padding: 6px 22px;
+  padding: 10px 32px;
   min-width: 73px;
 
   text-align: center;
@@ -533,7 +528,8 @@ footer {
   fill: #fff;
 }
 
-.join-link:hover {
+.join-link:hover,
+.join-link:focus {
   background-color: var(--accent-color);
 }
 
